[package]
name = "crypto-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="u256"
path="src/256.rs"

[[bin]]
name="u384"
path="src/384.rs"

[[bin]]
name="algo"
path="src/algos.rs"

[[bin]]
name="limb_convert"
path="src/limb_convert.rs"

[dependencies]
lambdaworks-math = { git = "https://github.com/RajeshRk18/lambdaworks.git", branch = "montgomery-backend-32bits"}

